--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   url_launcher: ^6.1.9
   animated_text_kit: ^4.2.2
   go_router: ^6.0.6
+  file_selector: ^0.9.2+2
+  firebase_storage: ^11.0.11
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
