--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   go_router: ^6.0.6
   file_selector: ^0.9.2+2
   firebase_storage: ^11.0.11
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
